--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
   ), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
-    hsl(45, 100%, 71%) 0%, 
+    hsl(300, 91%, 59%) 50%, 
     hsla(36, 100%, 69%, 0) 50%
   );
   --bg-gradient-yellow-2: linear-gradient(
@@ -50,8 +50,8 @@
   );
   --text-gradient-yellow: linear-gradient(
     to right, 
-    hsl(300, 91%, 59%), 
-    hsl(300, 91%, 59%)
+    hsl(300, 91%, 59%) 50%, 
+    hsl(300, 91%, 59%) 50%
   );
 
   /* solid */
@@ -64,7 +64,7 @@
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
   --orange-yellow-crayola: hsl(300, 91%, 59%);
-  --vegas-gold: hsl(45, 54%, 58%);
+  --vegas-gold: hsl(300, 91%, 59%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
