--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,12 @@
     hsl(300, 91%, 59%) 50%
   );
 
+  --text-gradient-jet: linear-gradient(
+    to right, 
+    hsl(300, 91%, 59%) 50%, 
+    hsl(300, 52%, 96%) 50%
+  );
+
   /* solid */
 
   --jet: hsl(0, 0%, 22%);
@@ -862,7 +868,7 @@ main {
 }
 
 .skill-progress-fill {
-  background: var(--text-gradient-yellow);
+  background: var(--text-gradient-jet);
   height: 100%;
   border-radius: inherit;
 }
