--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -861,11 +861,9 @@ main {
 }
 
 .skill-progress-bg {
-  background: var(--text-gradient-jet);
-  width: 100%;
-  height: 8px;
-  border-radius: 10px;
+  background: linear-gradient(to right, white 0%, #ffc0cb 50%, pink 100%);
 }
+
 
 .skill-progress-fill {
   background: var(--text-gradient-jet);
