--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,14 @@
-/*-----------------------------------*\
-  #style.css
-\*-----------------------------------*/
-
-
-/**
- * copyright 2022 @codewithsadee
- */
-
-
-
-
-
-/*-----------------------------------*\
-  #CUSTOM PROPERTY
-\*-----------------------------------*/
 
 :root {
 
-  /**
-   * colors
-   */
-
+  /* COLORS */
+/*---------------------------------------------------------------------------------------*/
   /* gradient */
 
   --bg-gradient-onyx: linear-gradient(
     to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
-    hsl(0, 0%, 19%) 97%
+    hsl(240, 5%, 67%) 3%, 
+    hsl(0, 40%, 65%) 97%
   );
   --bg-gradient-jet: linear-gradient(
     to bottom right, 
