--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,7 +317,7 @@ main {
 }
 
 .avatar-box {
-  background: var(--color_fundo_imagens);
+  background: var(--bg-gradient-onyx);
   border-radius: 20px;
 }
 
@@ -573,7 +573,7 @@ main {
   top: 0;
   left: 0;
   transform: translate(15px, -25px);
-  background: var(--color_fundo_imagens);
+  background: var(--bg-gradient-onyx);
   border-radius: 14px;
   box-shadow: var(--shadow-1);
 }
@@ -681,7 +681,7 @@ main {
 .modal-close-btn ion-icon { --ionicon-stroke-width: 50px; }
 
 .modal-avatar-box {
-  background: var(--color_fundo_imagens);
+  background: var(--bg-gradient-onyx);
   width: max-content;
   border-radius: 14px;
   margin-bottom: 15px;
