point resume change color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,8 @@
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(0, 40%, 65%);
-  --vegas-gold: hsl(300, 91%, 59%);
+  --icons-marcacao: hsl(0, 40%, 65%);
+  --ponto-resume: hsl(300, 91%, 59%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
@@ -132,11 +132,11 @@ input, textarea {
 }
 
 ::selection {
-  background: var(--orange-yellow-crayola);
+  background: var(--icons-marcacao);
   color: var(--smoky-black);
 }
 
-:focus { outline-color: var(--orange-yellow-crayola); }
+:focus { outline-color: var(--icons-marcacao); }
 
 html { font-family: var(--ff-poppins); }
 
@@ -177,7 +177,7 @@ article {
   justify-content: center;
   align-items: center;
   font-size: 16px;
-  color: var(--orange-yellow-crayola);
+  color: var(--icons-marcacao);
   box-shadow: var(--shadow-1);
   z-index: 1;
 }
@@ -251,7 +251,7 @@ article.active {
 }
 
 .has-scrollbar::-webkit-scrollbar-thumb {
-  background: var(--orange-yellow-crayola);
+  background: var(--icons-marcacao);
   border-radius: 5px;
 }
 
@@ -345,7 +345,7 @@ main {
   right: -15px;
   border-radius: 0 15px;
   font-size: 13px;
-  color: var(--orange-yellow-crayola);
+  color: var(--icons-marcacao);
   background: var(--border-gradient-onyx);
   padding: 10px;
   box-shadow: var(--shadow-2);
@@ -470,7 +470,7 @@ main {
 .navbar-link:hover,
 .navbar-link:focus { color: var(--light-gray-70); }
 
-.navbar-link.active { color: var(--orange-yellow-crayola); }
+.navbar-link.active { color: var(--icons-marcacao); }
 
 
 
@@ -781,7 +781,7 @@ main {
 }
 
 .timeline-list span {
-  color: var(--vegas-gold);
+  color: var(--ponto-resume);
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
@@ -965,7 +965,7 @@ main {
   --scale: 0.8;
 
   background: var(--jet);
-  color: var(--orange-yellow-crayola);
+  color: var(--icons-marcacao);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1090,7 +1090,7 @@ main {
   transition: var(--transition-1);
 }
 
-.blog-post-item > a:hover .blog-item-title { color: var(--orange-yellow-crayola); }
+.blog-post-item > a:hover .blog-item-title { color: var(--icons-marcacao); }
 
 .blog-text {
   color: var(--light-gray);
@@ -1149,7 +1149,7 @@ main {
 
 .form-input::placeholder { font-weight: var(--fw-500); }
 
-.form-input:focus { border-color: var(--orange-yellow-crayola); }
+.form-input:focus { border-color: var(--icons-marcacao); }
 
 textarea.form-input {
   min-height: 100px;
@@ -1167,7 +1167,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   position: relative;
   width: 100%;
   background: var(--border-gradient-onyx);
-  color: var(--orange-yellow-crayola);
+  color: var(--icons-marcacao);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1605,7 +1605,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .filter-item button:hover { color: var(--light-gray-70); }
 
-  .filter-item button.active { color: var(--orange-yellow-crayola); }
+  .filter-item button.active { color: var(--icons-marcacao); }
 
   /* portfolio and blog grid */
 
