--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,14 @@
   );
   --bg-gradient-jet: linear-gradient(
     to bottom right, 
+    hsla(0, 80%, 18%, 0.251) 0%, 
+    hsla(0, 80%, 11%, 0) 100%
+  ), hsl(2, 70%, 13%);
+  /*--bg-gradient-jet: linear-gradient(
+    to bottom right, 
     hsla(240, 1%, 18%, 0.251) 0%, 
     hsla(240, 2%, 11%, 0) 100%
-  ), hsl(240, 2%, 13%);
+  ), hsl(240, 2%, 13%);*/
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
     hsl(0, 40%, 65%) 50%, 
@@ -25,7 +30,7 @@
     hsla(45, 100%, 71%, 0.251) 0%, 
     hsla(35, 100%, 68%, 0) 59.86%
   ), hsl(240, 2%, 13%);
-  --border-gradient-onyx: linear-gradient(
+  --bordas: linear-gradient(
     to bottom right, 
     hsl(0, 0%, 25%) 0%, 
     hsla(0, 0%, 25%, 0) 50%
@@ -169,7 +174,7 @@ article {
 
 .icon-box {
   position: relative;
-  background: var(--border-gradient-onyx);
+  background: var(--bordas);
   width: 30px;
   height: 30px;
   border-radius: 8px;
@@ -259,7 +264,7 @@ article.active {
 
 .content-card {
   position: relative;
-  background: var(--border-gradient-onyx);
+  background: var(--bordas);
   padding: 15px;
   padding-top: 45px;
   border-radius: 14px;
@@ -346,7 +351,7 @@ main {
   border-radius: 0 15px;
   font-size: 13px;
   color: var(--icons-marcacao);
-  background: var(--border-gradient-onyx);
+  background: var(--bordas);
   padding: 10px;
   box-shadow: var(--shadow-2);
   transition: var(--transition-1);
@@ -509,7 +514,7 @@ main {
 
 .service-item {
   position: relative;
-  background: var(--border-gradient-onyx);
+  background: var(--bordas);
   padding: 20px;
   border-radius: 14px;
   box-shadow: var(--shadow-2);
@@ -1029,7 +1034,7 @@ main {
 
 .blog-post-item > a {
   position: relative;
-  background: var(--border-gradient-onyx);
+  background: var(--bordas);
   height: 100%;
   box-shadow: var(--shadow-4);
   border-radius: 16px;
@@ -1166,7 +1171,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 .form-btn {
   position: relative;
   width: 100%;
-  background: var(--border-gradient-onyx);
+  background: var(--bordas);
   color: var(--icons-marcacao);
   display: flex;
   justify-content: center;
@@ -1202,7 +1207,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   cursor: not-allowed;
 }
 
-.form-btn:disabled:hover { background: var(--border-gradient-onyx); }
+.form-btn:disabled:hover { background: var(--bordas); }
 
 .form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
 
