--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,11 @@
     hsl(240, 5%, 67%) 3%, 
     hsl(0, 40%, 65%) 97%
   );
-  --bg-gradient-jet: linear-gradient(
-    to bottom right, 
-    hsla(0, 80%, 18%, 0.251) 0%, 
-    hsla(0, 80%, 11%, 0) 100%
-  ), hsl(2, 70%, 13%);
-  /*--bg-gradient-jet: linear-gradient(
+  --fundo-about-resume: linear-gradient(
     to bottom right, 
     hsla(240, 1%, 18%, 0.251) 0%, 
     hsla(240, 2%, 11%, 0) 100%
-  ), hsl(240, 2%, 13%);*/
+  ), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
     hsl(0, 40%, 65%) 50%, 
@@ -277,7 +272,7 @@ article.active {
   content: "";
   position: absolute;
   inset: 1px;
-  background: var(--bg-gradient-jet);
+  background: var(--fundo-about-resume);
   border-radius: inherit;
   z-index: -1;
 }
@@ -363,7 +358,7 @@ main {
   position: absolute;
   inset: 1px;
   border-radius: inherit;
-  background: var(--bg-gradient-jet);
+  background: var(--fundo-about-resume);
   transition: var(--transition-1);
   z-index: -1;
 }
@@ -525,7 +520,7 @@ main {
   content: "";
   position: absolute;
   inset: 1px;
-  background: var(--bg-gradient-jet);
+  background: var(--fundo-about-resume);
   border-radius: inherit;
   z-index: -1;
 }
@@ -1190,7 +1185,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   content: "";
   position: absolute;
   inset: 1px;
-  background: var(--bg-gradient-jet);
+  background: var(--fundo-about-resume);
   border-radius: inherit;
   z-index: -1;
   transition: var(--transition-1);
@@ -1209,7 +1204,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .form-btn:disabled:hover { background: var(--bordas); }
 
-.form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
+.form-btn:disabled:hover::before { background: var(--fundo-about-resume); }
 
 
 
