--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,9 @@
   --onyx: hsl(240, 1%, 17%);
   --eerie-black-1: hsl(240, 2%, 13%);
   --eerie-black-2: hsl(240, 2%, 12%);
-  --smoky-black: hsl(0, 0%, 7%);
-  --white-1: hsl(0, 0%, 100%);
+  --smoky-black: hsl(231, 95%, 15%);
+  /*--smoky-black: hsl(0, 0%, 7%);*/
+  --white-1: hsl(0, 33%, 1%);
   --white-2: hsl(0, 0%, 98%);
   --icons-marcacao: hsl(0, 70%, 70%);
   --ponto-resume: hsl(0, 70%, 70%);
