--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,6 +539,7 @@ main {
   font-size: var(--fs-6);
   font-weight: var(--fw-3);
   line-height: 1.6;
+  text-align: justify
 }
 
 
@@ -591,6 +592,7 @@ main {
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  text-align: justify;
 }
 
 
