--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -842,6 +842,17 @@ main {
   font-weight: var(--fw-300);
 }
 
+.styled-title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px; /* Adjust margin as needed */
+}
+
+.styled-title::before {
+  content: "\2022"; /* Bullet point character */
+  margin-right: 10px; /* Adjust margin as needed */
+  font-size: 1.2rem; /* Adjust font size as needed */
+}
 .skill-progress-bg {
   background: var(--jet);
   width: 100%;
