--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,7 +843,7 @@ main {
 }
 
 .styled-title {
-  display: flex;
+  flex-grow: 1;
   align-items: center;
   margin-bottom: 5px; /* Adjust margin as needed */
 }
@@ -851,19 +851,7 @@ main {
 .styled-title::before {
   content: "\2022"; /* Bullet point character */
   margin-right: 10px; /* Adjust margin as needed */
-  font-size: 1.2rem; /* Adjust font size as needed */
-}
-.skill-progress-bg {
-  background: var(--jet);
-  width: 100%;
-  height: 8px;
-  border-radius: 10px;
-}
-
-.skill-progress-fill {
-  background: var(--linhas-anos);
-  height: 100%;
-  border-radius: inherit;
+  font-size: 2.2rem; /* Adjust font size as needed */
 }
 
 
