--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,7 +843,7 @@ main {
 }
 
 .styled-title {
-  flex-grow: 1;
+  display: flex;
   align-items: center;
   margin-bottom: 5px; /* Adjust margin as needed */
 }
@@ -851,7 +851,7 @@ main {
 .styled-title::before {
   content: "\2022"; /* Bullet point character */
   margin-right: 10px; /* Adjust margin as needed */
-  font-size: 2.2rem; /* Adjust font size as needed */
+  font-size: 1.2rem; /* Adjust font size as needed */
 }
 
 
