--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,14 +544,14 @@ main {
 
 
 /**
- * #testimonials 
+ * #Testimonials 
  */
 
-.testimonials { margin-bottom: 30px; }
+.Testimonials { margin-bottom: 30px; }
 
-.testimonials-title { margin-bottom: 20px; }
+.Testimonials-title { margin-bottom: 20px; }
 
-.testimonials-list {
+.Testimonials-list {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -565,12 +565,12 @@ main {
   scroll-snap-type: inline mandatory;
 }
 
-.testimonials-item {
+.Testimonials-item {
   min-width: 100%;
   scroll-snap-align: center;
 }
 
-.testimonials-avatar-box {
+.Testimonials-avatar-box {
   position: absolute;
   top: 0;
   left: 0;
@@ -580,9 +580,9 @@ main {
   box-shadow: var(--shadow-1);
 }
 
-.testimonials-item-title { margin-bottom: 7px; }
+.Testimonials-item-title { margin-bottom: 7px; }
 
-.testimonials-text {
+.Testimonials-text {
   color: var(--light-gray);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
@@ -597,7 +597,7 @@ main {
 
 
 /**
- * #testimonials-modal
+ * #Testimonials-modal
  */
 
 .modal-container {
@@ -643,7 +643,7 @@ main {
   pointer-events: all;
 }
 
-.testimonials-modal {
+.Testimonials-modal {
   background: var(--eerie-black-2);
   position: relative;
   padding: 15px;
@@ -657,7 +657,7 @@ main {
   z-index: 2;
 }
 
-.modal-container.active .testimonials-modal {
+.modal-container.active .Testimonials-modal {
   transform: scale(1);
   opacity: 1;
 }
@@ -1393,11 +1393,11 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .service-content-box { text-align: left; }
 
-  /* testimonials */
+  /* Testimonials */
 
-  .testimonials-title { margin-bottom: 25px; }
+  .Testimonials-title { margin-bottom: 25px; }
 
-  .testimonials-list {
+  .Testimonials-list {
     gap: 30px;
     margin: 0 -30px;
     padding: 30px;
@@ -1409,28 +1409,28 @@ textarea.form-input::-webkit-resizer { display: none; }
     padding-top: 25px;
   }
 
-  .testimonials-avatar-box {
+  .Testimonials-avatar-box {
     transform: translate(30px, -30px);
     border-radius: 20px;
   }
 
-  .testimonials-avatar-box img { width: 80px; }
+  .Testimonials-avatar-box img { width: 80px; }
 
-  .testimonials-item-title {
+  .Testimonials-item-title {
     margin-bottom: 10px;
     margin-left: 95px;
   }
 
-  .testimonials-text {
+  .Testimonials-text {
     line-clamp: 2;
     -webkit-line-clamp: 2;
   }
 
-  /* testimonials modal */
+  /* Testimonials modal */
 
   .modal-container { padding: 20px; }
 
-  .testimonials-modal {
+  .Testimonials-modal {
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
@@ -1571,9 +1571,9 @@ textarea.form-input::-webkit-resizer { display: none; }
    * ABOUT
    */
 
-  /* testimonials modal */
+  /* Testimonials modal */
 
-  .testimonials-modal {
+  .Testimonials-modal {
     gap: 35px;
     max-width: 680px;
   }
@@ -1717,9 +1717,9 @@ textarea.form-input::-webkit-resizer { display: none; }
     gap: 20px 25px;
   }
 
-  /* testimonials */
+  /* Testimonials */
 
-  .testimonials-item { min-width: calc(50% - 15px); }
+  .Testimonials-item { min-width: calc(50% - 15px); }
 
   /* clients */
 
